<resources>
    <string name="app_name">MytravelDairyBata</string>
    <string name="viewbetalogo">viewbetalogo</string>
    <string name="btnviewplan">btnviewplan</string>
    <string name="btnnewplan" />
    <string name="betatext1">여행계획 및 자료 정리 APP</string>
    <string name="dnattfileicon">dnattfileicon</string>
    <string name="dnattfiletext1">dnattfiletext1</string>
    <string name="testtextview2">testtextView2</string>
    <string name="test">화면전환 test</string>
    <string name="days">기간(Days)</string>
    <string name="editdepart">출발일:YYYYMMDD</string>
    <string name="editplanname">여행계획서 이름 입력</string>
    <string name="backbtn">backbtn</string>
    <string name="logotext">MyTravelDairy</string>
    <string name="logo">llogo</string>
    <string name="testbtn">신규생성</string>
    <string name="progressbar">Please wait ...</string>
</resources>
